feature: get last messages on a new connection; commit5(finish)
