# src/modules/chats/controllers/chats.controller.ts
@@ -5,7 +5,7 @@ import { QueryGetChatsDto } from '../dto/requests/query-get-chats.dto';
 import { ChatEntity } from '../entities/chat.entity';
 import { DataResponse } from '../../../common/swagger/data-response.dto';
 import { ApiData } from '../../../common/swagger/api-data.decorator';
-import { FavoriteChat, FavoriteChats, FavoriteChatsDto } from '../dto/requests/post-favorites-chat.dto';
+import { FavoriteChat, FavoriteChatsDto } from '../dto/requests/post-favorites-chat.dto';
 
 @Controller('chats')
 export class ChatsController {
@@ -37,7 +37,7 @@ export class ChatsController {
     async favoritesChats(
         @Body() favoriteChatsDto: FavoriteChatsDto,
         @Headers('socket_id') socketId: string,
-    ): Promise<DataResponse<string | FavoriteChats[]>> {
+    ): Promise<DataResponse<string | FavoriteChat[]>> {
         return this.chatsService.favoriteChats(favoriteChatsDto.chats, socketId);
     }
 }
